leptos_macro/tests/compiler_assumptions/04_two_step_pre_check_ufcs_plus_method.stderr
error[E0277]: wrong type: `bool` is not of type 'i32'
  --> tests/compiler_assumptions/04_two_step_pre_check_ufcs_plus_method.rs:33:6
   |
33 |     <_ as IsI32>::check(&val);
   |      ^ the trait `IsI32` is not implemented for `bool`
   |
help: the trait `IsI32` is implemented for `i32`
  --> tests/compiler_assumptions/04_two_step_pre_check_ufcs_plus_method.rs:24:1
   |
24 | impl IsI32 for i32 {}
   | ^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `pass` found for type `bool` in the current scope
  --> tests/compiler_assumptions/04_two_step_pre_check_ufcs_plus_method.rs:38:19
   |
38 |     let val = val.pass();
   |                   ^^^^ method not found in `bool`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `IsI32` defines an item `pass`, perhaps you need to implement it
  --> tests/compiler_assumptions/04_two_step_pre_check_ufcs_plus_method.rs:14:1
   |
14 | trait IsI32 {
   | ^^^^^^^^^^^
